# BleMacroKeyboard

./: BLEKeyboard.cpp  BLEKeyboard.h  BleKeyboard.cpp  BleMacroKeyboard.cpp  BleMacroKeyboard.h  BleMacroKeyboard.ino  BleMacroKeyboardAndConsole.cpp  BleMacroKeyboardAndConsole.ino  M5Util.cpp  M5Util.h  README.md  SerialUtil.cpp  SerialUtil.h  ble_keyboard.ino  eeprom_config.cpp  eeprom_config.h
idf_build/: CMakeLists.txt  README.md  sdkconfig
idf_build/components/: M5Stack  arduino
idf_build/main/: CMakeLists.txt  util.cmake
